--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,19 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build WASM",
+            "label": "Build AVL Tree",
             "type": "shell",
             "command": "C:/Users/ssaqi/emsdk/upstream/emscripten/emcc.bat",
             "args": [
                 "main.cpp",
                 "-o",
                 "main.js",
-                "-s", "EXPORTED_RUNTIME_METHODS=[\"ccall\",\"cwrap\",\"getValue\",\"setValue\",\"HEAP32\"]",
-                "-s", "EXPORTED_FUNCTIONS=[\"_initGraph\",\"_addEdge\",\"_getResultBuffer\",\"_runBFS\",\"_runDFS\",\"_runPrims\",\"_runDijkstra\",\"_main\"]",
+                "-s", "EXPORTED_RUNTIME_METHODS=[\"ccall\",\"cwrap\"]",
+                "-s", "EXPORTED_FUNCTIONS=[\"_initTree\",\"_insertNode\",\"_deleteNode\",\"_searchNode\",\"_getTreeJSON\",\"_getTraversal\",\"_main\"]",
                 "-s", "WASM=1",
                 "-s", "ALLOW_MEMORY_GROWTH=1",
                 "-s", "NO_EXIT_RUNTIME=1"
             ],
+            "options": {
+                "cwd": "${workspaceFolder}/AVL Tree"
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
